--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>rf-meter</title>
-  
+  <title>RF Meter</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
- <body>
+<body>
   <div id="root"></div>
-  <!-- <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script> -->
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="main.js"></script>
 </body>
-
 </html>
